--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -178,14 +178,14 @@ $$
 
 ### (b)
 
-```{r}
+```{r gamma rejection sampling}
 set.seed(137)
 
 generate_from_gamma <- function(n, shape = 0.5) {
   c <- gamma(shape) / (1 / shape + 1 / exp(1))   # constant that minimizes the envelope
   x <- vector(mode = "numeric", length = n)
   for (i in 1:n) {
-    repeat{
+    repeat {
       x[i] <- generate_from_piecewise(1, shape)  # draw from proposal
       u <- runif(1)                              # draw from U(0, 1)
       f <- dgamma(x[i], shape = shape)           # target value
@@ -221,8 +221,121 @@ generate_from_gamma <- function(n, shape = 0.5) {
 ## 2.
 
 ### (a)
+We will now use the ratio-of-uniforms method to simulate from $\operatorname{Gamma}(\alpha,\beta = 1)$. Additionally we have $\alpha>1$ this time. Let us define
+\begin{equation}\label{eq:rat-of-uni}
+  C_f = \left\{(x_1, x_2) : 0 \leq x_1 \leq \sqrt{f^*\left(\frac{x_2}{x_1}\right)}\right\}, \quad \text{where} \quad f^*(x) = \begin{cases}
+           x^{\alpha - 1}e^{-x}, & x > 0,\\
+           0, & \text{otherwise},
+  \end{cases}
+\end{equation}
+
+and
+
+\begin{equation}\label{eq:rat-bounds}
+a = \sqrt{\sup_x f^*(x)},\quad b_+ = \sqrt{\sup_{x\geq 0}(x^2 f^*(x))}\quad \text{and}\quad b_- = -\sqrt{\sup_{x\leq 0}(x^2 f^*(x))},
+\end{equation}
+
+such that $C_f\subset[0,1]\times[b_-, b_+]$.
+
+First we find $\sup_x f^*(x)$. This must be when $x>0$. We differentiate $f^*(x)$ and setting the expression equal to zero to find the stationary point.
+$$
+\begin{split}
+  0 &= \frac{d}{dx} f^*(x) \\
+  &= \frac{d}{dx} x^{\alpha - 1}e^{-x} \\
+  &= e^{-x}x^{\alpha - 2}\left((\alpha - 1) - x\right) \\
+  \Rightarrow\quad x &= \alpha - 1,\quad \text{where}\quad\alpha > 1.
+\end{split}
+$$
+Since we have only one stationary point, $f^*(x)$ is continuous, $f^*(x) > 0\ \forall x>0$ and $\lim_{x\to0+}f^*(x) = \lim_{x\to\infty}f^*(x) = 0$, then $x = \alpha - 1$ must be the global maximum point. That is
+\begin{equation}\label{eq:rat-a}
+ a = \sqrt{f^*(\alpha - 1)} = \sqrt{(\alpha - 1)^{\alpha - 1}e^{-(\alpha - 1)}} = \left(\frac{\alpha - 1}{e}\right)^{(\alpha - 1)/2}.
+\end{equation}
+
+We now wish to find $b_+$.
+
+$$
+\begin{split}
+  0 &= \frac{d}{dx} x^2f^*(x) \\
+  &= \frac{d}{dx} x^{\alpha + 1}e^{-x} \\
+  &= e^{-x}x^{\alpha}\left((\alpha + 1) - x\right) \\
+  \Rightarrow\quad x &= \alpha + 1,\quad \text{where}\quad\alpha > 1.
+\end{split}
+$$
+Using the same reasoning as for $a$, we have that $x = \alpha + 1$ is a global maximum point for $x^2f^*(x)$. Then
+\begin{equation}\label{eq:rat-b_plus}
+  b_+ = \sqrt{(\alpha + 1)^2 f^*(\alpha + 1)} = \sqrt{(\alpha + 1)^{\alpha + 1}e^{-(\alpha + 1)}} = \left(\frac{\alpha + 1}{e}\right)^{(\alpha + 1)/2}.
+\end{equation}
+
+Finally, we have that
+\begin{equation}\label{eq:rat-b_minus}
+  b_- = -\sqrt{\sup_{x\leq 0}(x^2\cdot 0)} = 0.
+\end{equation}
 
 ### (b)
+
+To avoid producing `NaNs`, we will implement the ratio-of-uniform method on a log scale.
+We get the following log-transformations.
+$$
+\begin{split}
+  X_1\sim \Uniform(0, a)&\Rightarrow \log X_1 = \log a + \log U_1,\quad U_1\sim\Uniform(0,1); \\
+  X_2\sim \Uniform(b_-=0, b_+ = b) &\Rightarrow \log X_2 = \log b + \log U_2,\quad U_2\sim\Uniform(0,1); \\
+  y = \frac{x_2}{x_1} &\Rightarrow y = \exp\{(\log x_2) - (\log x_1)\}; \\
+  0\leq x_1\leq \sqrt{f^*(y)} &\Rightarrow \log x_1 \leq \frac{1}{2}\log f^*(y); \\
+  f^*(y) = \begin{cases}y^{\alpha - 1}e^{-y},&y>0, \\ 0, &\text{otherwise},\end{cases} &\Rightarrow \log f^*(y) = \begin{cases}(\alpha - 1)\log y - y,&y>0, \\ -\infty, &\text{otherwise.}\end{cases}
+\end{split}
+$$
+
+```{r gamma ratio-of-uniform method, fig.cap = "\\label{fig:gamma-trials}Number of trials before accepting $N = 1000$ simulations for various shape parameters ($\\alpha$) using the ratio-of-uniform method."}
+set.seed(434)
+
+lgamma_core <- function(x, alpha = 2) {
+  ifelse(
+    test = x <= 0,
+    yes  = -Inf,
+    no   = (alpha - 1)*log(x) - x
+  )
+}
+
+sample_from_gamma_rou <- function(n, alpha = 2, include_trials = FALSE) {
+  log_a <- ((alpha - 1) / 2) * (log(alpha - 1) - 1)
+  log_b <- ((alpha + 1) / 2) * (log(alpha + 1) - 1)
+  trials <- 0
+  y <- vector(mode = "numeric", length = n)
+  for (i in 1:n) {
+    repeat {
+      log_x1 <- log_a + log(runif(1))
+      log_x2 <- log_b + log(runif(1))
+      y[i] <- exp(log_x2 - log_x1)
+      log_f <- lgamma_core(y[i], alpha = alpha)
+      if (log_x1 <= 0.5 * log_f) {
+        break
+      } else {
+        trials <- trials + 1
+      }
+    }
+  }
+  if (include_trials) {
+    return(list(x = y, trials = trials))
+  }
+  return(y)
+}
+
+# generate 1000 samples for each alpha and record number of trials
+n <- 1000
+m <- 50
+alpha <- seq(2, 2000, length.out = m)
+trials <- vector(mode = "integer", length = m)
+
+for (i in 1:m) {
+  trials[i] <- sample_from_gamma_rou(n, alpha[i], include_trials = TRUE)$trials
+}
+
+# plot trials wrt. alpha
+ggplot(mapping = aes(x = alpha, y = trials)) +
+  geom_point()
+```
+
+Figure \ref{fig:gamma-trials} strongly suggests that the acceptance probability decreases with increasing $\alpha$. That is, the ratio of the area of the square $a\cdot(b_+ - b_-) = ab$ and the region $C_f$ is increasing when $\alpha$ increases.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
